@@ -155,6 +155,7 @@ source "package/libcgicc/Config.in"
 source "package/libcurl/Config.in"
 source "package/libdnet/Config.in"
 source "package/libeXosip2/Config.in"
+source "package/libnl/Config.in"
 source "package/libosip2/Config.in"
 source "package/libpcap/Config.in"
 source "package/libsoup/Config.in"
