@@ -1,0 +1,6 @@
+config BR2_PACKAGE_LIBNL
+	bool "libnl"
+	help
+	  A library for applications dealing with netlink socket.
+
+	  http://people.suug.ch/~tgr/libnl/
